--- a/css/styles.css
+++ b/css/styles.css
@@ -26,6 +26,7 @@ body {
   color: var(--primary-text-color);
   font-family: Roboto, sans-serif;
   font-size: 14px;
+  font-weight: 400;
   letter-spacing: 0.03em;
   }
 
@@ -46,6 +47,7 @@ body {
 font-family: Roboto, sans-serif;
 cursor: pointer;
 }
+
 
 /* индекс */
 
@@ -228,6 +230,10 @@ background-color: var(--bgr-color);
 list-style-type: none;
 }
 
+.logo-text-footer {
+  color: var(--primary-bg-color);
+}
+
 .footer-mail, .footer-tel {
 font-style: normal;
 color: var(--transparent-white-color);
@@ -248,14 +254,25 @@ line-height: 1.71;
 .footer-mail:focus,
 .footer-tel:hover,
 .footer-tel:focus {
-  color: var(--accept-color);
+color: var(--accept-color);
 }
 
 /* Портфолио */
 
-.button:hover,
-.button:focus {
-  color: var(--accept-color);
+.button-secondary:hover,
+.button-secondary:focus {
+background-color: var(--accept-color);
+color: var(--primary-bg-color);
+}
+
+.button-secondary {
+color: var(--title-text-color);
+background-color: var(--bgr-secondary-color);
+font-weight: 500;
+font-size: 16px;
+line-height: 1.62;
+text-align: center;
+letter-spacing: 0.03em;
 }
 
 .portfolio-list {
