--- a/css/styles.css
+++ b/css/styles.css
@@ -19,6 +19,8 @@
   --bgr-color: #2F303A;
   --black-color: #000000; 
   --bgr-secondary-color: #F5F4FA;
+  --transpernt-white-color: rgba(255, 255, 255, 0.6);
+  --hidden-color: #188CE8;
 }
 
 body {
@@ -119,7 +121,7 @@ letter-spacing: 0.02em;
 .mail-link:focus,
 .tel-link:hover,
 .tel-link:focus {
-  color: var(--accept-color);
+color: var(--accept-color);
 }
 
 /* main */
@@ -144,6 +146,11 @@ font-size: 16px;
 line-height: 1.87;
 letter-spacing: 0.06em;
 }
+
+ .hero-btn:hover,
+ .hero-btn:focus {
+ background-color: var(--hidden-color);
+ }
 
 /* feature */
 
@@ -236,7 +243,7 @@ list-style-type: none;
 
 .footer-mail, .footer-tel {
 font-style: normal;
-color: var(--transparent-white-color);
+color: var(--transpernt-white-color);
 text-decoration: none;
 line-height: 1.71;
 }
